add typekit futura-pt

--- a/app/design/frontend/default/respond/template/page/html/head.phtml
+++ b/app/design/frontend/default/respond/template/page/html/head.phtml
@@ -40,6 +40,8 @@
 //]]>
 </script>
 <![endif]-->
+<script type="text/javascript" src="//use.typekit.net/sft4iaa.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <?php echo $this->getCssJsHtml() ?>
 <?php echo $this->getChildHtml() ?>
 <?php echo $this->helper('core/js')->getTranslatorScript() ?>
