Set H1 font and color
Trajan Pro 3 and light grey

--- a/skin/frontend/default/respond/css/styles.css
+++ b/skin/frontend/default/respond/css/styles.css
@@ -438,7 +438,7 @@ a:focus        { outline:0; color: #d90202; }
 
 h1, h2, h3, h4, h5, h6 { padding: 0; margin: 0 0 18px; clear: both; }
 
-h1									{ font-size: 36px;  line-height: 1; font-family: colaboratelightregular, tahoma, arial, sans-serif; } /* 36/36 */
+h1									{ color: #979797; font-size: 18px;  line-height: 1; font-family: "trajan-pro-3", tahoma, arial, sans-serif; } /* 36/36 */
 h2									{ font-size: 28px; line-height: 1.285714286; font-family: colaborateregular, tahoma, arial, sans-serif; }/* 36/28 */
 h3									{ font-size: 22px; line-height: 1.636363636; font-family: colaborateregular, tahoma, arial, sans-serif; }/* 36/22 */
 h4									{ font-size: 18px; line-height: 1; font-family: colaborateregular, tahoma, arial, sans-serif; }/* 18/18 */
