--- a/skin/frontend/default/respond/css/styles.css
+++ b/skin/frontend/default/respond/css/styles.css
@@ -503,7 +503,7 @@ ul,ol , dl, dt, dd        { list-style:none; margin:0; padding: 0; }
 cols    1     2      3      4      5      6      7      8      9      10    11   12    13    14    15    16
 px      40    100    160    220    280    340    400    460    520    580   640  700   760   820   880   940        */
 
-.page { width: 940px; position: relative; margin: 0 auto; padding: 0px 20px 72px; background: #fff; border-top: 4px solid #000; }
+.page { width: 940px; position: relative; margin: 0 auto; padding: 0px 20px 72px; background: #fff; }
 
 /* Baseline images overlay 
 
